first build verification complete